[gd_scene load_steps=3 format=3 uid="uid://coimgb8yw667t"]

[ext_resource type="Script" path="res://scripts/UI/pause_menu.gd" id="1_60cy2"]
[ext_resource type="PackedScene" uid="uid://pgnmvv3qc1pw" path="res://scenes/ui/save_game_menu.tscn" id="2_k6x2g"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_60cy2")
save_game_menu_scene = ExtResource("2_k6x2g")

[node name="BackgroundDimmer" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.490196)

[node name="MenuPanel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="ButtonContainer" type="VBoxContainer" parent="MenuPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -58.0
offset_right = 20.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2

[node name="SaveButton" type="Button" parent="MenuPanel/ButtonContainer"]
layout_mode = 2
text = "SAVE"

[node name="LoadButton" type="Button" parent="MenuPanel/ButtonContainer"]
layout_mode = 2
text = "LOAD"

[node name="OptionButton" type="Button" parent="MenuPanel/ButtonContainer"]
layout_mode = 2
text = "OPTION"

[node name="BackTitleButton" type="Button" parent="MenuPanel/ButtonContainer"]
layout_mode = 2
text = "TITLE"

[node name="ExitButton" type="Button" parent="MenuPanel/ButtonContainer"]
layout_mode = 2
text = "EXIT"
